==> dkunzig/grbl-kunzig/main/grbl_limits.cpp <==
#include "grbl.h"
  #define HOMING_AXIS_SEARCH_SCALAR  1.1 // Must be > 1 to ensure limit switch will be engaged.
  #define HOMING_AXIS_LOCATE_SCALAR  5.0 // Must be > 1 to ensure limit switch is cleared.

void limits_go_home(uint8_t cycle_mask)
{
	

	printf("enter Limits_go_home cycle_mask = %x\n",cycle_mask);
	if (cycle_mask == 0)
	{
		HomeMotorZ();
		HomeMotorX();
		HomeMotorY();
		
	}
	else if (cycle_mask == 4)
	{
		HomeMotorZ();
		//MoveMotorA();
	}
	else if (cycle_mask == 2)
	{
		HomeMotorY();
	}
	else if (cycle_mask == 1)
	{
		HomeMotorX();
	}
	BackOff_All_Motors();
}

void limits_init()
{  
	
  #ifndef DISABLE_LIMIT_PIN_PULL_UP  
		#ifdef X_LIMIT_PIN
			gpio_set_direction(X_LIMIT_PIN, GPIO_MODE_INPUT);
			gpio_set_pull_mode(X_LIMIT_PIN,GPIO_PULLUP_ONLY);
			//pinMode(X_LIMIT_PIN, INPUT_PULLUP);  // input with pullup
		#endif
		#ifdef Y_LIMIT_PIN
			gpio_set_direction(Y_LIMIT_PIN, GPIO_MODE_INPUT);
			gpio_set_pull_mode(Y_LIMIT_PIN,GPIO_PULLUP_ONLY);
			//pinMode(Y_LIMIT_PIN, INPUT_PULLUP);
		#endif
		#ifdef Y_LIMIT_B_PIN
			gpio_set_direction(Y_LIMIT_B_PIN, GPIO_MODE_INPUT);
			gpio_set_pull_mode(Y_LIMIT_B_PIN,GPIO_PULLUP_ONLY);
			//pinMode(Y_LIMIT_B_PIN, INPUT_PULLUP);
		#endif
		#ifdef Z_LIMIT_PIN
			gpio_set_direction(Z_LIMIT_PIN, GPIO_MODE_INPUT);
			gpio_set_pull_mode(Z_LIMIT_PIN,GPIO_PULLUP_ONLY);
			//pinMode(Z_LIMIT_PIN, INPUT_PULLUP);
		#endif
		
	#else
		#ifdef X_LIMIT_PIN
			gpio_set_direction(X_LIMIT_PIN, GPIO_MODE_INPUT);
			//pinMode(X_LIMIT_PIN, INPUT); // input no pullup
		#endif
		#ifdef Y_LIMIT_PIN
			gpio_set_direction(Y_LIMIT_PIN, GPIO_MODE_INPUT);
			//pinMode(Y_LIMIT_PIN, INPUT);
		#endif
		#ifdef Y_LIMIT_B_PIN
			gpio_set_direction(Y_LIMIT_B_PIN, GPIO_MODE_INPUT);
			//pinMode(Y_LIMIT_B_PIN, INPUT);
		#endif
		#ifdef Z_LIMIT_PIN
			gpio_set_direction(Z_LIMIT_PIN, GPIO_MODE_INPUT);
			//pinMode(Z_LIMIT_PIN, INPUT);	
		#endif

  #endif
   
  if (bit_istrue(settings.flags,BITFLAG_HARD_LIMIT_ENABLE)) {
    // attach interrupt to them
		#ifdef X_LIMIT_PIN
			//attachInterrupt(digitalPinToInterrupt(X_LIMIT_PIN), isr_limit_switches, CHANGE);
		#endif
		#ifdef Y_LIMIT_PIN
			//attachInterrupt(digitalPinToInterrupt(Y_LIMIT_PIN), isr_limit_switches, CHANGE);
		#endif
		#ifdef Y_LIMIT_B_PIN
			//		attachInterrupt(digitalPinToInterrupt(Y_LIMIT_B_PIN), isr_limit_switches, CHANGE);
		#endif
		#ifdef Z_LIMIT_PIN
			//attachInterrupt(digitalPinToInterrupt(Z_LIMIT_PIN), isr_limit_switches, CHANGE);
		#endif
  } else {
    limits_disable();
  }
  
	// setup task used for debouncing
	limit_sw_queue = xQueueCreate(10, sizeof( int ));
	
	xTaskCreate(limitCheckTask, 
				"limitCheckTask", 
				2048, 
				NULL, 
				5, // priority 
				NULL);
								
								
}

uint8_t limits_get_state()
{
	uint8_t limit_state = 0;
	uint8_t pin = 0;
	
	#ifdef X_LIMIT_PIN
		pin |= gpio_get_level(X_LIMIT_PIN);
		//printf("After read X pin = %x\n", pin);
	#endif
	
	#ifdef Y_LIMIT_PIN
		
		pin |= (gpio_get_level(Y_LIMIT_PIN) << Y_AXIS);
		//printf("After read Y pin = %x\n", pin);
	#endif
	#ifdef Y_LIMIT_B_PIN
			pin |= (gpio_get_level(Y_LIMIT_B_PIN) << 3);
			//printf("After read Y_B pin = %x\n", pin);
	#endif

	#ifdef Z_LIMIT_PIN
		pin |= (gpio_get_level(Z_LIMIT_PIN) << Z_AXIS);
		//printf("After read Z pin = %x\n", pin);
	#endif

	#ifdef INVERT_LIMIT_PIN_MASK // not normally used..unless you have both normal and inverted switches
		pin ^= INVERT_LIMIT_PIN_MASK;
	#endif	
  
	if (bit_istrue(settings.flags,BITFLAG_INVERT_LIMIT_PINS)) { 
		pin ^= LIMIT_MASK;
	}
  
	if (pin) {
		uint8_t idx;
		for (idx=0; idx<N_AXIS; idx++) {
			if (pin & get_limit_pin_mask(idx)) { limit_state |= (1 << idx); }
		}
	}
	//printf("Returning  pin = %x\n", pin);
	return(limit_state);
}
